<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="12dp"
    app:cardCornerRadius="8dp"
    android:elevation="16dp"
    app:cardBackgroundColor="@color/card"
    app:contentPadding="8dp" >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre_proveedor"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_weight="2"/>
            <TextView
                android:id="@+id/tvRazonSocial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Bosch"
                android:layout_weight="1"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fecha_de_llegada"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_weight="2"/>
            <TextView
                android:id="@+id/tvFechaLlegada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2023-08-14"
                android:layout_weight="1"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/numero_de_guia"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_weight="2"/>
            <TextView
                android:id="@+id/tvNumeroGuia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="34236876"
                android:layout_weight="1"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre_de_empleado"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_weight="2"/>
            <TextView
                android:id="@+id/tvNombreEmpleado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Jose Perez"
                android:layout_weight="1"/>
        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.cardview.widget.CardView>